--- a/openttd-runner/Cargo.toml
+++ b/openttd-runner/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.1", features = ["derive"] }
 fs_extra = "1.3.0"
+mongodb = { version = "2.8.1", features = ["tokio-sync"] }
 regex = "1.10.3"
 rust-ini = "0.20.0"
 serde = { version = "1.0.197", features = ["derive"] }
