--- a/openttd-runner/config_dev.yml
+++ b/openttd-runner/config_dev.yml
@@ -1,4 +1,6 @@
-mongodb_url: localhost
+dao:
+  mongodb_uri: mongodb://localhost:27017
+  database: openttd_runner_dev
 openttd_directory: /Users/ivanfefer/Projects/openttd-ai-contest/OpenTTD/build
 player_names:
   - AdmiralAI
