--- a/openttd-runner/Cargo.toml
+++ b/openttd-runner/Cargo.toml
@@ -4,11 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+openttd-runner-lib = { path = "../openttd-runner-lib" }
 clap = { version = "4.5.1", features = ["derive"] }
-fs_extra = "1.3.0"
-mongodb = { version = "2.8.1", features = ["tokio-sync"] }
-regex = "1.10.3"
-rust-ini = "0.20.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.32"
-tempfile = "3.10.0"
