Add bananas-ai and ai downloader stub

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "bananas-api",
     "openttd-runner-lib",
-    "openttd-runner"
+    "openttd-runner", "ai-downloader",
 ]
