--- a/ai-downloader/Cargo.toml
+++ b/ai-downloader/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bananas-api = { path = "../bananas-api" }
 clap = { version = "4.5.1", features = ["derive"] }
