--- a/ai-downloader/Cargo.toml
+++ b/ai-downloader/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 bananas-api = { path = "../bananas-api" }
 clap = { version = "4.5.1", features = ["derive"] }
+reqwest = "0.12.4"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
